--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.69",
     "@types/react-dom": "^18.2.22",
     "bootstrap": "^5.3.3",
+    "gantt-task-react": "^0.3.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
