--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,14 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-flow-renderer": "^10.3.17",
+    "react-graph-vis": "^1.0.7",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "reactflow": "^11.11.1",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
